--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ click==8.1.8
 fastapi==0.115.12
 h11==0.14.0
 idna==3.10
+Jinja2==3.1.6
+MarkupSafe==3.0.2
 pillow==11.2.1
+psycopg2==2.9.10
 pydantic==2.11.3
 pydantic_core==2.33.1
 python-dotenv==1.1.0
